# bill-calculator

./: .gitignore  README.md  TASK.md  __main__.py  app.py  bills_calculator.spec  calculate_bill.py  calculate_electricity_bill.py  calculator.py  main.py  models.py  people.txt  pyproject.toml  requirements.txt  setup.py  storage.py  ui.py
bills_calculator/: __init__.py  __main__.py  app.py  calculator.py  exporter.py  history.py  models.py  storage.py  tui_app.py  ui.py
bills_calculator/core/: __init__.py  calculator.py  constants.py  models.py
bills_calculator/data/: __init__.py  exporter.py  history.py  storage.py
bills_calculator/tui/: TUI_SKILL.md  __init__.py  app.py
bills_calculator/tui/screens/: __init__.py  history_screen.py  main_screen.py
bills_calculator/tui/styles/: input.tcss  main.tcss
bills_calculator/tui/widgets/: __init__.py  command_input.py  header.py  input_group.py  result_viewer.py  slash_suggest.py
bills_calculator/utils/: __init__.py
data/: history.json
