[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bills-calculator"
version = "1.0.0"
description = "A Python-based application to calculate electricity and water bills for shared accommodations."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich",
    "textual>=0.63.0",
    "pyfiglet",
    "typer",
    "pyinstaller",
    "pyperclip>=1.8.2",
]

[project.scripts]
bills-calculator = "bills_calculator.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["bills_calculator"]
